--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Ultra Deep Tech</title>
-  <meta content="Incorporating intelligent automated solutions to help new businesses be more valuable." name="description">
-  <meta content="" name="keywords">
+  <meta content="about Ultradeeptech, company information, technology company, tech solutions, innovation, company history, mission, vision, values, technology leadership, Ultradeeptech team" name="keywords">
+  <meta content="Learn about Ultradeeptech, a leading technology company specializing in advanced technological solutions, innovation, and digital transformation. Discover our mission, vision, and values." name="description">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
