--- a/career.html
+++ b/career.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Ultra Deep Tech</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Join the Ultradeeptech team! Explore career opportunities in the technology industry and find out how you can contribute to innovative projects and grow your career with us." name="description">
+  <meta content="technology careers, job opportunities, tech jobs, careers at Ultradeeptech, job openings, work in tech, tech industry careers, employment, career growth, technology company jobs" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
