--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Ultra Deep Tech</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Get in touch with Ultradeeptech for any business inquiries or support. Contact us to learn more about our technology solutions and services, and how we can help your business." name="description">
+  <meta content="contact Ultradeeptech, technology consulting contact, tech solutions contact, business inquiry, get in touch, customer support, technology services contact, IT solutions contact, reach out" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
