--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Ultra Deep Tech</title>
-  <meta content="Incorporating intelligent automated solutions to help  businesses be more valuable.
-  " name="description">
-  <meta content="" name="keywords">
+  <meta content="Incorporating artificial intelligence and automated solutions to help businesses be more valuable." name="description">
+  <meta content="advanced technology, technological solutions, technological innovation, software development, artificial intelligence, big data, data analysis, automation, digital transformation, technological services, technology consulting, Ultradeeptech, business technology, IT solutions, cybersecurity, IoT, Internet of Things, machine learning, cloud computing" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
