--- a/productsdetails.html
+++ b/productsdetails.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Ultra Deep Tech</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Explore detailed information about Ultradeeptech's innovative technology products, designed to provide advanced solutions for businesses. Learn more about our cutting-edge products." name="description">
+  <meta content="technology products, product details, innovative products, tech solutions, software products, IT products, Ultradeeptech products, business technology products, digital products, advanced technology" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
