--- a/service-details.html
+++ b/service-details.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Ultra Deep Tech</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Discover detailed information about the wide range of technology services offered by Ultradeeptech, including software development, AI, big data, cybersecurity, and digital transformation." name="description">
+  <meta content="technology services, service details, tech solutions, software development, AI services, big data solutions, cybersecurity, digital transformation, Ultradeeptech services, IT consulting" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
