--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/script.js"></script>
-  <script src="assets/js/cookies.js"></script>
+  <script src="cookie-message.js" defer></script>
   <script src="assets/js/background.js"></script>
 
   <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
