--- a/index.html
+++ b/index.html
@@ -448,10 +448,12 @@
 
   </footer>
 
-  <div id="cookie-banner" class="cookie-banner" style="display: none;">
+  <div id="cookie-banner" class="cookie-banner">
     <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="politics.html#cookie">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
-    <button id="accept-cookies">Accept</button>
-    <button id="deny-cookies">Deny</button>
+    <div class="button-container">
+      <button id="accept-cookies">Accept</button>
+      <button id="deny-cookies">Deny</button>
+  </div>
 </div>
 
   <div id="cookie-banner" class="cookie-banner" style="display: none;">
