--- a/about.html
+++ b/about.html
@@ -224,13 +224,45 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
               <div class="team-member">
                 <div class="member-img">
-                  <img src="assets/img/team/team-1.jpeg" class="img-fluid" alt="">
+                  <img src="assets/img/team/Avi Pilcer.png" class="img-fluid" alt="">
                   <div class="social">
                     <a href="https://www.linkedin.com/in/avipil/"><i class="bi bi-linkedin"></i></a>                  </div>
                 </div>
                 <div class="member-info">
                   <h4>Avi Pilcer</h4>
-                  <span>CEO and Chief Scientist</span>
+                  <p>CEO and Chief Scientist</p>
+                  <span>AI expert, ex-Israeli intelligence. Drives advancements in AI and cybersecurity.                  </span>
+                </div>
+              </div>
+            </div><!-- End Team Member -->
+
+
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+              <div class="team-member">
+                <div class="member-img">
+                  <img src="assets/img/team/Sasha Daich.jpeg" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/sasha-daich/"><i class="bi bi-linkedin"></i></a>                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Sasha Daich</h4>
+                  <p>VP business development</p>
+                  <span>A7.18X revenue generation in 2.5 years at Forter, now at a valuation of $3.3B. Expert in strategic growth and market expansion.</span>
+                </div>
+              </div>
+            </div><!-- End Team Member -->
+  
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+              <div class="team-member">
+                <div class="member-img">
+                  <img src="assets/img/team/Guido Galicer.jpg" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/guido-galicer/"><i class="bi bi-linkedin"></i></a></div>
+                </div>
+                <div class="member-info">
+                  <h4>Guido Galicer</h4>
+                  <p>Product / Strategy</p>
+                  <span>Founder of Habla Agency. Proven track record in scaling companies to multi-million dollar valuations. Strategist with U.S. education and global perspective.</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
@@ -238,18 +270,37 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
               <div class="team-member">
                 <div class="member-img">
-                  <img src="assets/img/team/team-2.jpeg" class="img-fluid" alt="">
+                  <img src="assets/img/team/Karla Lemoine.jpeg" class="img-fluid" alt="">
                   <div class="social">
                     <a href="https://www.linkedin.com/in/karla-lemoine-2393a433/"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
                   <h4>Karla Lemoine</h4>
-                  <span>COO and Client Satisfaction</span>
+                  <p> Legal and operations Lead</p>
+                  <span>Law and HR expert. Ensures regulatory compliance and operational efficiency. Strong communicator.</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
   
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+              <div class="team-member">
+                <div class="member-img">
+                  <img src="assets/img/team/maxi acri.png" class="img-fluid" alt="">
+                  <div class="social">
+                 <!--   <a href=""><i class="bi bi-linkedin"></i></a> -->
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Maximilian Acri</h4>
+                  <p>Tech Lead</p>
+                  <span>Technology expert. Developed numerous applications and platforms serving millions daily. Leads with technical mastery.</span>
+                </div>
+              </div>
+            </div><!-- End Team Member -->
+
+
+
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
               <div class="team-member">
                 <div class="member-img">
@@ -259,8 +310,9 @@
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Maximilian Yomal</h4>
-                  <span>Advisor</span>
+                  <h4>Sebastian Yomal</h4>
+                  <p>Advisor</p>
+                  <span></span>
                 </div>
               </div>
             </div><!-- End Team Member -->
@@ -274,7 +326,8 @@
                 </div>
                 <div class="member-info">
                   <h4>Micaela Freedman</h4>
-                  <span>Advisor</span>
+                  <p>Advisor</p>
+                  <span></span>
                 </div>
               </div>
             </div><!-- End Team Member -->
