Changed the team description

--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@
                 <div class="member-info">
                   <h4>Sasha Daich</h4>
                   <p>VP business development</p>
-                  <span>A7.18X revenue generation in 2.5 years at Forter, now at a valuation of $3.3B. Expert in strategic growth and market expansion.</span>
+                  <span>7.18X revenue generation in 2.5 years at Forter, now at a valuation of $3.3B. Expert in strategic growth and market expansion.</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
@@ -262,7 +262,7 @@
                 <div class="member-info">
                   <h4>Guido Galicer</h4>
                   <p>Product / Strategy</p>
-                  <span>Founder of Habla Agency. Proven track record in scaling companies to multi-million dollar valuations. Strategist with U.S. education and global perspective.</span>
+                  <span>Founder of Habla Agency. Proven track record in marketing companies to multi-million dollar valuations. Strategist with strong education and global perspective.</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
