--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,7 @@
 
 
           <div class="col-lg-7">
-            <form id="contactForm" action="https://website-dlkgkgiuwa-uc.a.run.app/send_mail.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="500">
+            <form id="contactForm" action="/send_mail.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="500">
               <div class="row gy-4">
                   <div class="col-md-6">
                       <input type="text" name="name" class="form-control" placeholder="Your Name" required>
