--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
                 <div class="swiper-slide">
                   <div class="item">
-                    <h3 class="mb-3">Leadership in Technological In Ultra Deep Techtion</h3>
+                    <h3 class="mb-3">Leadership in Technological Innovation</h3>
                     <!--<h4 class="mb-3">Optio reiciendis accusantium iusto architecto at quia minima maiores quidem, dolorum.</h4>-->
                     <p>At Ultra Deep Tech, we lead the AI revolution with advanced technologies and innovative solutions. Our commitment to research and development ensures that we stay ahead in the tech realm, providing our clients with a competitive edge.</p>
                   </div>
