added the word security to slogan

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Ultra Deep Tech</title>
-  <meta content="Incorporating artificial intelligence and automated solutions to help businesses be more valuable." name="description">
+  <meta content="Incorporating artificial intelligence and automated security solutions to help businesses be more valuable." name="description">
   <meta content="advanced technology, technological solutions, technological innovation, software development, artificial intelligence, big data, data analysis, automation, digital transformation, technological services, technology consulting, Ultradeeptech, business technology, IT solutions, cybersecurity, IoT, Internet of Things, machine learning, cloud computing" name="keywords">
 
   <!-- Favicons -->
@@ -116,7 +116,7 @@
           <div class="col-xl-7">
             <h1 data-aos="fade-up " id="typewriter-title"></h1>
             <blockquote data-aos="fade-up" data-aos-delay="100">
-              <p id="typewriter-drescription">Incorporating artificial intelligence and automated solutions to help businesses be more valuable.</p>
+              <p id="typewriter-drescription">Incorporating artificial intelligence and automated security solutions to help businesses be more valuable.</p>
             </blockquote>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
               <a href="#why-us" class="btn-get-started">Get Started</a>
