--- a/index.html
+++ b/index.html
@@ -381,6 +381,14 @@
     </section><!-- /Features Section -->
 <!--
     <!- Recent Posts Section -->
+    <section id="youtube-videos" class="youtube-videos section">
+      <div class="container">
+        <h2 class="section-title" data-aos="fade-up">Our Latest YouTube Videos</h2>
+        <div id="video-container" class="row justify-content-center gy-4" data-aos="fade-up" data-aos-delay="100">
+          <!-- Aquí se cargarán los videos de YouTube -->
+        </div>
+      </div>
+    </section>
     
   </main>
 
