--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@
   <script src="assets/js/script.js"></script>
   <script src="assets/js/cookies.js" defer></script>
   <script src="assets/js/background.js"></script>
+  <script src="assets/js/yt.js"></script>
 
   <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
     <i class="bi bi-whatsapp whatsapp-icon"></i>
