--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/css/hover.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -380,15 +383,22 @@
 
     </section><!-- /Features Section -->
 <!--
-    <!- Recent Posts Section -->
-    <section id="youtube-videos" class="youtube-videos section">
-      <div class="container">
-        <h2 class="section-title" data-aos="fade-up">Our Latest YouTube Videos</h2>
-        <div id="video-container" class="row justify-content-center gy-4" data-aos="fade-up" data-aos-delay="100">
-          <!-- Aquí se cargarán los videos de YouTube -->
-        </div>
+<section id="youtube-videos" class="youtube-videos section">
+  <div class="container">
+    <h2 class="section-title" data-aos="fade-up">Our Latest YouTube Videos</h2>
+    <div class="swiper-container" data-aos="fade-up" data-aos-delay="100">
+      <div class="swiper-wrapper" id="video-container">
+        <!-- Swiper slides will be dynamically added here -->
       </div>
-    </section>
+      <!-- Pagination for selecting videos -->
+      <div class="swiper-pagination"></div>
+      <!-- Navigation buttons -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+    </div>
+  </div>
+</section>
+
     
   </main>
 
