--- a/politics.html
+++ b/politics.html
@@ -49,50 +49,81 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/favicon.png" alt="" class="logo-img">
         <h1 class="sitename">Ultra Deep Tech</h1>
-    </a>
+      </a>
   
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li class="dropdown"><a href="about.html"><span>About Us</span>
-            <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <!-- About Us Menu -->
+          <li class="dropdown">
+            <a href="about.html">
+              <i class="bi bi-info-circle-fill" style="margin-right: 8px;"></i>
+              <span>About Us</span>
+              <i class="bi bi-chevron-down toggle-dropdown" style="margin-left: 5px;"></i>
+            </a>
             <ul>
-              <li><a href="about.html#company-history">Company History</a></li>
-              <li><a href="about.html#team">Leadership Team</a></li>
-              <li><a href="about.html#values-ethics">Values and Ethics</a></li>
-              <li><a href="about.html#csr">Corporate Social Responsibility (CSR)</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="productsdetails.html"><span>Products & Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="productsdetails.html?product=product-1">Interpretability</a></li>
-              <li><a href="productsdetails.html?product=product-2">Anonymization</a></li>
-              <li><a href="productsdetails.html?product=product-3">Compression</a></li>
-              <li><a href="productsdetails.html?product=product-4">Benchmarking</a></li>
-              <li><a href="productsdetails.html?product=product-5">GenAI Safety</a></li>
-              <li><a href="productsdetails.html?product=product-6">Evolving Threat Management</a></li>
-              <li><a href="productsdetails.html?product=product-7">Algorithmic Protection</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="service-details.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="service-details.html?product=product-1">AI and Data Engineering Consulting</a></li>
-              <li><a href="service-details.html?product=product-2">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
-              <li><a href="service-details.html#case-studies">Case Studies and Client Testimonials</a></li>
+              <li><a href="about.html#company-history"><i class="bi bi-clock-history" style="margin-right: 8px;"></i>Company History</a></li>
+              <li><a href="about.html#team"><i class="bi bi-people-fill" style="margin-right: 8px;"></i>Leadership Team</a></li>
+              <li><a href="about.html#values-ethics"><i class="bi bi-heart-fill" style="margin-right: 8px;"></i>Values and Ethics</a></li>
+              <li><a href="about.html#csr"><i class="bi bi-globe-americas" style="margin-right: 8px;"></i>Corporate Social Responsibility (CSR)</a></li>
             </ul>
           </li>
   
-          <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <!-- Products & Solutions Menu -->
+          <li class="dropdown">
+            <a href="productsdetails.html">
+              <i class="bi bi-box-seam" style="margin-right: 8px;"></i>
+              <span>Products & Solutions</span>
+              <i class="bi bi-chevron-down toggle-dropdown" style="margin-left: 5px;"></i>
+            </a>
             <ul>
-              <li><a href="career.html#openings">Current Job Openings</a></li>
-              <li><a href="career.html#core-values">Core Values </a></li>
+              <li><a href="productsdetails.html?product=product-1"><i class="bi bi-bar-chart-fill" style="margin-right: 8px;"></i>Interpretability</a></li>
+              <li><a href="productsdetails.html?product=product-2"><i class="bi bi-shield-lock-fill" style="margin-right: 8px;"></i>Anonymization</a></li>
+              <li><a href="productsdetails.html?product=product-3"><i class="bi bi-arrow-up-right-square-fill" style="margin-right: 8px;"></i>Compression</a></li>
+              <li><a href="productsdetails.html?product=product-4"><i class="bi bi-bar-chart-line-fill" style="margin-right: 8px;"></i>Benchmarking</a></li>
+              <li><a href="productsdetails.html?product=product-5"><i class="bi bi-shield-fill" style="margin-right: 8px;"></i>GenAI Safety</a></li>
+              <li><a href="productsdetails.html?product=product-6"><i class="bi bi-lock-fill" style="margin-right: 8px;"></i>Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html?product=product-7"><i class="bi bi-shield-check" style="margin-right: 8px;"></i>Algorithmic Protection</a></li>
             </ul>
           </li>
   
-          <li class="dropdown"><a href="contact.html"><span>Contact Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <!-- Services Menu -->
+          <li class="dropdown">
+            <a href="service-details.html">
+              <i class="bi bi-tools" style="margin-right: 8px;"></i>
+              <span>Services</span>
+              <i class="bi bi-chevron-down toggle-dropdown" style="margin-left: 5px;"></i>
+            </a>
             <ul>
-              <li><a href="contact.html#faqs">FAQ's</a></li>
-              <li><a href="contact.html#mapa">Office Locations</a></li>
-              <li><a href="contact.html#contact">Chat with Us</a></li>
+              <li><a href="service-details.html?product=product-1"><i class="bi bi-gear-fill" style="margin-right: 8px;"></i>AI and Data Engineering Consulting</a></li>
+              <li><a href="service-details.html?product=product-2"><i class="bi bi-diagram-3-fill" style="margin-right: 8px;"></i>Personalized Solutions</a></li>
+              <li><a href="service-details.html#case-studies"><i class="bi bi-file-earmark-text-fill" style="margin-right: 8px;"></i>Case Studies</a></li>
+            </ul>
+          </li>
+  
+          <!-- Career Menu -->
+          <li class="dropdown">
+            <a href="career.html">
+              <i class="bi bi-briefcase-fill" style="margin-right: 8px;"></i>
+              <span>Career</span>
+              <i class="bi bi-chevron-down toggle-dropdown" style="margin-left: 5px;"></i>
+            </a>
+            <ul>
+              <li><a href="career.html#openings"><i class="bi bi-person-fill" style="margin-right: 8px;"></i>Current Job Openings</a></li>
+              <li><a href="career.html#"><i class="bi bi-stars" style="margin-right: 8px;"></i>Core Values</a></li>
+            </ul>
+          </li>
+  
+          <!-- Contact Us Menu -->
+          <li class="dropdown">
+            <a href="contact.html">
+              <i class="bi bi-envelope-fill" style="margin-right: 8px;"></i>
+              <span>Contact Us</span>
+              <i class="bi bi-chevron-down toggle-dropdown" style="margin-left: 5px;"></i>
+            </a>
+            <ul>
+              <li><a href="contact.html#faqs"><i class="bi bi-question-circle-fill" style="margin-right: 8px;"></i>FAQ's</a></li>
+              <li><a href="contact.html#mapa"><i class="bi bi-geo-alt-fill" style="margin-right: 8px;"></i>Office Locations</a></li>
+              <li><a href="contact.html#contact"><i class="bi bi-chat-dots-fill" style="margin-right: 8px;"></i>Chat with Us</a></li>
             </ul>
           </li>
         </ul>
@@ -333,6 +364,7 @@ If you have any questions about our Cookie Policy, please contact us via contact
               <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
               <a href="https://www.youtube.com/channel/UCivpA1Q4U8Y09Kvp1_j5QRg" target="_blank"><i class="bi bi-youtube"></i></a>
+              <a href="https://www.tiktok.com/@ultradeeptech" target="_blank"><i class="bi bi-tiktok"></i></a>
             </div>
           </div>
 
@@ -396,7 +428,10 @@ If you have any questions about our Cookie Policy, please contact us via contact
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <div id="preloader"></div>
+ <!-- Preloader -->
+<div id="preloader">
+  <img src="assets/img/logo_udt_03-400h.png" alt="Ultra Deep Tech Logo"> <!-- Asegúrate de usar la ruta correcta del logo -->
+</div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -414,6 +449,8 @@ If you have any questions about our Cookie Policy, please contact us via contact
 
   <a href="https://wa.link/2ebre2" class="whatsapp-float" target="_blank" data-aos="fade-up">
     <i class="bi bi-whatsapp whatsapp-icon"></i>
+    <span class="tooltip-text">Have a Question? Write Us</span>
+
 </a>
 
 </body>
