--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,6 @@
 
 <body class="contact-page">
 
-
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
@@ -54,75 +53,72 @@
         <ul>
           <!-- About Us Menu -->
           <li class="dropdown">
-            <a href="about.html">
-              <i class="bi bi-info-circle-fill" style="margin-right: 8px;"></i>
+            <a href="about.html" class="nav-link">
+              <i class="bi bi-info-circle-fill"></i>
               <span>About Us</span>
-              <i class="bi bi-chevron-down toggle-dropdown" style="margin-left: 5px;"></i>
             </a>
             <ul>
-              <li><a href="about.html#company-history"><i class="bi bi-clock-history" style="margin-right: 8px;"></i>Company History</a></li>
-              <li><a href="about.html#team"><i class="bi bi-people-fill" style="margin-right: 8px;"></i>Leadership Team</a></li>
-              <li><a href="about.html#values-ethics"><i class="bi bi-heart-fill" style="margin-right: 8px;"></i>Values and Ethics</a></li>
-              <li><a href="about.html#csr"><i class="bi bi-globe-americas" style="margin-right: 8px;"></i>Corporate Social Responsibility (CSR)</a></li>
+              <li><a href="about.html#company-history" class="nav-link"><i class="bi bi-clock-history"></i><span>Company History</span></a></li>
+              <li><a href="about.html#team" class="nav-link"><i class="bi bi-people-fill"></i><span>Leadership Team</span></a></li>
+              <li><a href="about.html#values-ethics" class="nav-link"><i class="bi bi-heart-fill"></i><span>Values and Ethics</span></a></li>
+              <li><a href="about.html#csr" class="nav-link"><i class="bi bi-globe"></i><span>Corporate Social Responsibility (CSR)</span></a></li>
+              <li><a href="#youtube-videos" class="nav-link"><i class="bi bi-youtube"></i><span>Youtube Channel</span></a></li>
+              <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog</span></a></li>
             </ul>
           </li>
   
           <!-- Products & Solutions Menu -->
           <li class="dropdown">
-            <a href="productsdetails.html">
-              <i class="bi bi-box-seam" style="margin-right: 8px;"></i>
+            <a href="productsdetails.html" class="nav-link">
+              <i class="bi bi-box-seam"></i>
               <span>Products & Solutions</span>
-              <i class="bi bi-chevron-down toggle-dropdown" style="margin-left: 5px;"></i>
             </a>
             <ul>
-              <li><a href="productsdetails.html?product=product-1"><i class="bi bi-bar-chart-fill" style="margin-right: 8px;"></i>Interpretability</a></li>
-              <li><a href="productsdetails.html?product=product-2"><i class="bi bi-shield-lock-fill" style="margin-right: 8px;"></i>Anonymization</a></li>
-              <li><a href="productsdetails.html?product=product-3"><i class="bi bi-arrow-up-right-square-fill" style="margin-right: 8px;"></i>Compression</a></li>
-              <li><a href="productsdetails.html?product=product-4"><i class="bi bi-bar-chart-line-fill" style="margin-right: 8px;"></i>Benchmarking</a></li>
-              <li><a href="productsdetails.html?product=product-5"><i class="bi bi-shield-fill" style="margin-right: 8px;"></i>GenAI Safety</a></li>
-              <li><a href="productsdetails.html?product=product-6"><i class="bi bi-lock-fill" style="margin-right: 8px;"></i>Evolving Threat Management</a></li>
-              <li><a href="productsdetails.html?product=product-7"><i class="bi bi-shield-check" style="margin-right: 8px;"></i>Algorithmic Protection</a></li>
+              <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
+              <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
+              <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
+              <li><a href="productsdetails.html?product=product-4" class="nav-link"><i class="bi bi-bar-chart-line-fill"></i><span>Benchmarking</span></a></li>
+              <li><a href="productsdetails.html?product=product-5" class="nav-link"><i class="bi bi-shield-fill"></i><span>GenAI Safety</span></a></li>
+              <li><a href="productsdetails.html?product=product-6" class="nav-link"><i class="bi bi-lock-fill"></i><span>Evolving Threat Management</span></a></li>
+              <li><a href="productsdetails.html?product=product-7" class="nav-link"><i class="bi bi-shield-check"></i><span>Algorithmic Protection</span></a></li>
             </ul>
           </li>
   
           <!-- Services Menu -->
           <li class="dropdown">
-            <a href="service-details.html">
-              <i class="bi bi-tools" style="margin-right: 8px;"></i>
+            <a href="service-details.html" class="nav-link">
+              <i class="bi bi-tools"></i>
               <span>Services</span>
-              <i class="bi bi-chevron-down toggle-dropdown" style="margin-left: 5px;"></i>
             </a>
             <ul>
-              <li><a href="service-details.html?product=product-1"><i class="bi bi-gear-fill" style="margin-right: 8px;"></i>AI and Data Engineering Consulting</a></li>
-              <li><a href="service-details.html?product=product-2"><i class="bi bi-diagram-3-fill" style="margin-right: 8px;"></i>Personalized Solutions</a></li>
-              <li><a href="service-details.html#case-studies"><i class="bi bi-file-earmark-text-fill" style="margin-right: 8px;"></i>Case Studies</a></li>
+              <li><a href="service-details.html?product=product-1" class="nav-link"><i class="bi bi-gear-fill"></i><span>AI and Data Engineering Consulting</span></a></li>
+              <li><a href="service-details.html?product=product-2" class="nav-link"><i class="bi bi-diagram-3-fill"></i><span>Personalized Solutions</span></a></li>
+              <li><a href="service-details.html#case-studies" class="nav-link"><i class="bi bi-file-earmark-text-fill"></i><span>Case Studies</span></a></li>
             </ul>
           </li>
   
           <!-- Career Menu -->
           <li class="dropdown">
-            <a href="career.html">
-              <i class="bi bi-briefcase-fill" style="margin-right: 8px;"></i>
+            <a href="career.html" class="nav-link">
+              <i class="bi bi-briefcase-fill"></i>
               <span>Career</span>
-              <i class="bi bi-chevron-down toggle-dropdown" style="margin-left: 5px;"></i>
             </a>
             <ul>
-              <li><a href="career.html#openings"><i class="bi bi-person-fill" style="margin-right: 8px;"></i>Current Job Openings</a></li>
-              <li><a href="career.html#"><i class="bi bi-stars" style="margin-right: 8px;"></i>Core Values</a></li>
+              <li><a href="career.html#openings" class="nav-link"><i class="bi bi-person-fill"></i><span>Current Job Openings</span></a></li>
+              <li><a href="career.html#" class="nav-link"><i class="bi bi-stars"></i><span>Core Values</span></a></li>
             </ul>
           </li>
   
           <!-- Contact Us Menu -->
           <li class="dropdown">
-            <a href="contact.html">
-              <i class="bi bi-envelope-fill" style="margin-right: 8px;"></i>
+            <a href="contact.html" class="nav-link">
+              <i class="bi bi-envelope-fill"></i>
               <span>Contact Us</span>
-              <i class="bi bi-chevron-down toggle-dropdown" style="margin-left: 5px;"></i>
             </a>
             <ul>
-              <li><a href="contact.html#faqs"><i class="bi bi-question-circle-fill" style="margin-right: 8px;"></i>FAQ's</a></li>
-              <li><a href="contact.html#mapa"><i class="bi bi-geo-alt-fill" style="margin-right: 8px;"></i>Office Locations</a></li>
-              <li><a href="contact.html#contact"><i class="bi bi-chat-dots-fill" style="margin-right: 8px;"></i>Chat with Us</a></li>
+              <li><a href="contact.html#faqs" class="nav-link"><i class="bi bi-question-circle-fill"></i><span>FAQ's</span></a></li>
+              <li><a href="contact.html#mapa" class="nav-link"><i class="bi bi-geo-alt-fill"></i><span>Office Locations</span></a></li>
+              <li><a href="contact.html#contact" class="nav-link"><i class="bi bi-chat-dots-fill"></i><span>Chat with Us</span></a></li>
             </ul>
           </li>
         </ul>
