--- a/blog.html
+++ b/blog.html
@@ -138,7 +138,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Blog</li>
+            <li class="current">Blog & Social Media</li>
           </ol>
         </nav>
       </div>
@@ -168,6 +168,8 @@
           </div>
         </div>
       </section>
+
+      
   </main><!-- End #main -->
 
   <footer id="footer" class="footer">
