--- a/career.html
+++ b/career.html
@@ -64,7 +64,7 @@
               <li><a href="about.html#values-ethics" class="nav-link"><i class="bi bi-heart-fill"></i><span>Values and Ethics</span></a></li>
               <li><a href="about.html#csr" class="nav-link"><i class="bi bi-globe"></i><span>Corporate Social Responsibility (CSR)</span></a></li>
               <li><a href="#youtube-videos" class="nav-link"><i class="bi bi-youtube"></i><span>Youtube Channel</span></a></li>
-              <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog</span></a></li>
+                  <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog & Social Media</span></a></li>
             </ul>
           </li>
   
