--- a/politics.html
+++ b/politics.html
@@ -64,8 +64,8 @@
               <li><a href="about.html#team" class="nav-link"><i class="bi bi-people-fill"></i><span>Leadership Team</span></a></li>
               <li><a href="about.html#values-ethics" class="nav-link"><i class="bi bi-heart-fill"></i><span>Values and Ethics</span></a></li>
               <li><a href="about.html#csr" class="nav-link"><i class="bi bi-globe"></i><span>Corporate Social Responsibility (CSR)</span></a></li>
-              <li><a href="#youtube-videos" class="nav-link"><i class="bi bi-youtube"></i><span>Youtube Channel</span></a></li>
-                  <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog & Social Media</span></a></li>
+              <li><a href="index.html#youtube-videos" class="nav-link"><i class="bi bi-youtube"></i><span>Youtube Channel</span></a></li>
+              <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog & Social Media</span></a></li>
             </ul>
           </li>
   
@@ -373,6 +373,8 @@ If you have any questions about our Cookie Policy, please contact us via contact
               <li><a href="service-details.html">Services</a></li>
               <li><a href="politics.html#terms">Terms of service</a></li>
               <li><a href="politics.html#Privacy">Privacy policy</a></li>
+              <li><a href="index.html#youtube-videos">YouTube Channel</a></li>
+              <li><a href="blog.html">Blog & Social Media</a></li>
             </ul>
           </div>
 
