--- a/blog.html
+++ b/blog.html
@@ -153,7 +153,7 @@
               <div class="row justify-content-start" data-aos="zoom-in" data-aos-delay="100">
                 <div class="col-xl-6 col-md-6">
                   <div class="text-md-start">
-                    <h3> <span class="bi bi-linkedin"></span> Check Our Recently Post </h3>
+                    <h3> <span class="bi bi-linkedin"></span> Check Our Recent Posts </h3>
                     
                     
 
