Modified a few tipos in index, service and carreer pages

--- a/career.html
+++ b/career.html
@@ -106,7 +106,8 @@
             </a>
             <ul>
               <li><a href="career.html#openings" class="nav-link"><i class="bi bi-person-fill"></i><span>Current Job Openings</span></a></li>
-              <li><a href="career.html#" class="nav-link"><i class="bi bi-stars"></i><span>Core Values</span></a></li>
+              <li><a href="career.html#" class="nav-link"><i class="bi bi-stars"></i><span>Core 
+                Recruiting Values</span></a></li>
             </ul>
           </li>
   
@@ -160,7 +161,7 @@
           <div class="col-lg-12 col-md-12 service-item d-flex text" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase" ></i></div>
             <div>
-              <h4 class="title">See our complete offers in Linked In</h4>
+              <h4 class="title">See all our offers in LinkedIn</h4>
               <p class="description">Discover top job opportunities on our LinkedIn! Follow us here for daily updates and exclusive openings.</p>
               <a href="https://www.linkedin.com/company/ultra-deep-tech/jobs/" class="readmore stretched-link"><span>See in Linked In</span><i class="bi bi-arrow-right"></i></a>
             </div>
@@ -182,8 +183,8 @@
   <div class="container" >
           <!-- Section Title -->
           <div class="section-title"   data-aos="fade-up" id="openings">
-            <h2 style="margin-bottom: 0px; padding-bottom: 0px; ">Core Values</h2>
-            <p >Our guiding principles that drive our actions and decisions.</p>
+            <h2 style="margin-bottom: 0px; padding-bottom: 0px; ">Core Recruiting Values</h2>
+            <p >Guiding principles that drive our recruiting decisions.</p>
 
           </div><!-- End Section Title -->
     <div class="row row-cols-1 row-cols-md-3 gy-4">
