--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
               <h4>Elevate Your Business with Expert Consulting and Tailored Solutions</h4>
               <p>Transform your business with our expert AI and Data Engineering Consulting and personalized solutions. Contact us today to optimize processes, drive innovation, and achieve unparalleled success</p>
-              <a href="./contact.html" class="btn-get-started">Contact Us</a>
+              <a href="./contact.html#contact" class="btn-get-started">Contact Us</a>
             </div>
           </div>
         </div>
