--- a/service-details.html
+++ b/service-details.html
@@ -223,7 +223,7 @@
         <div class="card h-100 tech-card">
           <div class="card-body">
             <h5 class="card-title">Piere</h5>
-            <p class="card-text">In addition to the data science and machine learning expertise, we provided the team of Piere with a full AI-based rule engine. Universe aims at revolutionizing the way people interact with money by creating a financial concierge that can help you manage your money and make better financial decisions.</p>
+            <p class="card-text">In addition to the data science and machine learning expertise, we provided the team of Piere with a full AI-based rule engine. Piere aims at revolutionizing the way people interact with money by creating a financial concierge that can help you manage your money and make better financial decisions.</p>
           </div>
         </div>
       </div><!-- End Case Study 2 -->
@@ -233,7 +233,7 @@
         <div class="card h-100 tech-card">
           <div class="card-body">
             <h5 class="card-title">WiseLayer</h5>
-            <p class="card-text">We helped Fruition Data to build a data platform that allows their clients to run data flows and create simple machine learning models. Fruition Data is a data science company that helps businesses to make better decisions by providing them data-driven insights.</p>
+            <p class="card-text">We helped WiseLayer to build a data platform that allows their clients to run data flows and create simple machine learning models. WiseLayer is a data science company that helps businesses to make better decisions by providing them data-driven insights.</p>
           </div>
         </div>
       </div><!-- End Case Study 3 -->
@@ -356,7 +356,7 @@
       function loadProductContent(productId) {
         if (productId === 'product-1') {
           productContent.innerHTML = `
-            <h3>AI and Data Engieneering Consulting</h3>
+            <h3>AI and Data Engineering Consulting</h3>
             <p>Unlock the full potential of your data with our AI and Data Engineering Consulting services. From robust data architecture implementations to customized machine learning solutions, we empower businesses to make informed decisions and achieve competitive advantage. Experience seamless digital transformation, continuous innovation, and enhanced operational efficiency with our expert solutions.</p>`;
           productImg.src = 'assets/img/blog/blog-1.jpg';
         } else if (productId === 'product-2') {
