--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
               <span>Products & Solutions</span>
             </a>
             <ul>
+              <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.png" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
+
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
@@ -247,6 +249,29 @@
       </div>
 
     </section><!-- /Why Us Section -->
+
+    <section id="call-to-action" class="call-to-action section">
+
+      <img src="/assets/img/hero-bg.png" alt="">
+      <img src="/assets/img/image dashboard.png"  class="phone-1">
+
+      <div class="container">
+        
+        <div class="row justify-content-left" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-xl-6">
+            <div class="text-left">
+              <h3>Did you see our latest Product?</h3>
+              <h3>Discover the Power of <b>Safety Shield Ultra</b></h3>
+
+              <p>Want to learn more about how Safety Shield Ultra can revolutionize your data security? <br><br> Visit our comprehensive product page to explore all features, benefits, and see how our AI-driven solution can safeguard your critical information.</p>
+              <a class="cta-btn" href="safetyshield.html">Explore Safety Shield Ultra</a>
+              <a  id="seeInActionBtn" class="cta-btn download-btn"><i class="bi bi-play-circle"></i> <span>See It in Action</span></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section><!-- /Call To Action Section -->   
 
     <!-- Services Section -->
     <section id="services" class="services section">
@@ -573,6 +598,17 @@
     <span class="tooltip-text">Have a Question? Write Us</span>
 
 </a>
+
+
+<div id="videoModal" class="modal">
+  <div class="modal-content"> 
+    <span class="close">&times; </span> 
+    <video id="videoPlayer" width="100%" controls>
+      <source src="assets/video/demostracion español.mov" type="video/mp4">
+      Tu navegador no soporta el tag de video.
+    </video>
+  </div>
+</div>
 
 </body>
 
