--- a/politics.html
+++ b/politics.html
@@ -381,6 +381,7 @@ If you have any questions about our Cookie Policy, please contact us via contact
           <div class="col-lg-2 col-6 footer-links">
             <h4>Products & Solution</h4>
             <ul>
+              <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.png" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1">Interpretability</a></li>
               <li><a href="productsdetails.html?product=product-2">Anonymization</a></li>
               <li><a href="productsdetails.html?product=product-3">Compression</a></li>
