--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               <h3>Did you see our latest Product?</h3>
               <h3>Discover the Power of <b>Safety Shield Ultra</b></h3>
 
-              <p>Want to learn more about how Safety Shield Ultra can revolutionize your data security? <br><br> Visit our comprehensive product page to explore all features, benefits, and see how our AI-driven solution can safeguard your critical information.</p>
+              <p>Want to learn more about how Safety Shield Ultra can revolutionize your data security? <br> Visit our comprehensive product page to explore all features, benefits, and see how our AI-driven solution can safeguard your critical information.</p>
               <a class="cta-btn" href="safetyshield.html">Explore Safety Shield Ultra</a>
               <a  id="seeInActionBtn" class="cta-btn download-btn"><i class="bi bi-play-circle"></i> <span>See It in Action</span></a>
             </div>
